# knack

./: .gitignore  PLAN.md  docker-compose.yml  openclaw_confij.json  openclaw_skills_execution.md  pyproject.toml  requirements.txt
backend/: Dockerfile  IMPLEMENTATION.md  brd_schema.md  main.py  requirements.txt
backend/api/: deps.py
backend/api/v1/: README.md  auth.py  documents.py  jobs.py  router.py  transcript_requests.py  users.py  workflows.py
backend/core/: config.py  database.py  encryption.py  logging.py  security.py
backend/db/migrations/: 001_init.sql  002_job_callback_routing.sql
backend/models/: document.py  document_section.py  job_execution.py  transcript.py  transcript_request.py  user.py  user_external_identity.py  user_integration.py  workflow.py
backend/modules/: README.md
backend/modules/ai_brd/: prompts.py  schemas.py  service.py
backend/modules/auth/: schemas.py  service.py
backend/utils/: idempotency.py  retry.py
frontend/: Dockerfile  google_oauth_helper.html  streamlit_app.py
knack_v2/: .env.example  .gitignore  PLAN.md  PROOF_INTEGRATION.md  README.md  SOUL.md  docker-compose.yml  openclaw.json.example
knack_v2/proof/: Dockerfile
knack_v2/scripts/: poll-attendee-transcripts.mjs  poll-proof-comments.mjs
knack_v2/tools/: README.md
openclaw-plugin-backend-jobs/: README.md  openclaw.plugin.json  package.json
openclaw-plugin-backend-jobs/src/: index.ts
skills/generate_brd_from_transcript/: SKILL.md  SKILLS.md
skills/list_documents/: SKILLS.md
skills/regenerate_brd/: SKILL.md  SKILLS.md
(+54 files in other folders)
